--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "mongoose": "4.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
