--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "jwt-simple": "^0.5.0",
     "mongoose": "4.6.1",
     "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
