--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "4.6.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "nodemon": "^1.10.2"
