--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "jsonwebtoken": "^7.1.9",
     "jwt-simple": "^0.5.0",
     "mongoose": "4.6.1",
     "passport": "^0.3.2",
